# pracy

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt
backends/charm/: README.md  main.py
backends/relic/: CMakeLists.txt  README.md
backends/relic/include/: abe_scheme.h  abe_types.h  env.h  g.h  gt.h  h.h  ops.h  z.h
backends/relic/src/: abe_scheme.cpp  abe_types.cpp  benchmark.c  env.cpp  g.cpp  gt.cpp  h.cpp  main.cpp  ops.cpp  z.cpp
commands/: compile_scheme.sh  test_charm_backend.sh  test_relic_backend.sh
schemes/: README.md  a_0_oe.json  a_0_ok.json  a_1_xx.json  a_2_xx.json  a_3_xx.json  a_4_xx.json  a_5_xx.json  a_7_xx.json  b_0_oe.json  b_0_ok.json  b_1_xx.json  b_2_xx.json  b_3_xx.json  b_4_xx.json  b_5_xx.json  b_6_xx.json  b_7_xx.json  c_0_oe.json  c_0_ok.json  c_1_oe.json  c_1_ok.json  c_2_xx.json  c_3_xx.json  c_4_xx.json  c_7_xx.json  d_0_oe.json  d_0_ok.json  d_1_xx.json  d_2_xx.json  d_3_xx.json  d_4_xx.json  d_7_xx.json  e_0_oe.json  e_1_oe.json  e_1_ok.json  e_2_xx.json  e_3_xx.json  e_4_xx.json  e_5_xx.json  (+1 more)
src/pracy/: __init__.py
tests/analysis/: test_analyze_blinding_poly.py  test_analyze_common_vars.py  test_analyze_expression.py  test_analyze_fdh_map.py  test_analyze_group_map.py  test_analyze_key_poly.py  test_analyze_master_keys.py  test_analyze_pairs.py  test_analyze_primary_cipher_poly.py  test_analyze_scheme.py  test_analyze_scheme_b0.py  test_analyze_secondary_cipher_poly.py  test_analyze_singles.py  test_analyze_variant.py  test_typechecking.py
tests/codegen/: test_codegen_decrypt.py  test_codegen_encrypt.py  test_codegen_keygen.py  test_codegen_setup.py
tests/core/: test_var_equiv.py  test_var_sim.py
tests/integration/: test_a_0_oe.py  test_a_0_ok.py  test_a_1_xx.py  test_a_2_xx.py  test_a_3_xx.py  test_a_4_xx.py  test_a_5_xx.py  test_a_6_xx.py  test_a_7_xx.py  test_b_0_oe.py  test_b_0_ok.py  test_b_1_xx.py  test_b_2_xx.py  test_b_3_xx.py  test_b_4_xx.py  test_b_5_xx.py  (+25 more)
tools/: test_relic_backend.py
(+103 files in other folders)
